Contact menu problem solved with z-index

--- a/SASS/JournalWeb.scss/Journal.scss
+++ b/SASS/JournalWeb.scss/Journal.scss
@@ -82,6 +82,7 @@ select {
 }
 .contactMenu {
     position: absolute;
+    z-index: 9999;
     width: 100px;
     height: 100px;
     background-color: aquamarine;
